--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -1047,7 +1047,7 @@
     }
    ],
    "source": [
-    "# vérification des doublons\n",
+    "# vérification des doublons.\n",
     "print(data.duplicated().value_counts()) "
    ]
   },
